# ewoks

./: .flake8_nb  .gitattributes  .gitignore  .gitlab-ci-template.yml  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  demo.json  gitlab_pyjobs.py  pyproject.toml  setup.cfg
.github/workflows/: release.yml  test.yml
deploy/: deploy.sh
doc/: api.rst  cli.rst  conf.py  ewoks_ppf.rst  explanations.rst  hello_world.rst  howtoguides.rst  index.rst  tutorials.rst
doc/_external/: .wci.yml
doc/ewoks_api/: cli.rst  job.rst  python.rst  qt.rst  rest.rst  web.rst
doc/explanations/: index.rst  task_errors.rst  task_input_priority.rst
doc/howtoguides/: cli.rst  ewoks_events.rst  ewoks_ppf.ipynb  gui.rst  index.rst  inspect_workflows.rst  job.rst  python.rst  qt.rst  rest.rst  task_inputs.rst  task_python.rst  web.rst
doc/reference/: api.rst  cli.rst
doc/tutorials/: benchmark.nblink  create_and_edit.rst  develop.rst  ewoks_events.rst  execute.rst  external.rst  getting_started.rst  hello_world.rst  index.rst  infrastructure.rst  running_workflows.nblink
ewoks/: __init__.py  __main__.py  bindings.py
ewoks/tests/: test_projects.py
ewoks/tests/notebooks/: running_workflows.ipynb
src/ewoks/: __init__.py  __main__.py  _engines.py  bindings.py  task_utils.py  utils.py
src/ewoks/_requirements/: __init__.py
src/ewoks/_requirements/managers/: conda.py  fallback.py  pip.py  pipenv.py  pixi.py  poetry.py  uv.py
src/ewoks/_requirements/managers/utils/: base.py  commands.py  detect.py  supported.py  versions.py
src/ewoks/_requirements/metadata/: current.py  generate.py  parse.py  pip_freeze.py  unknown.py
src/ewoks/_requirements/metadata/gather/: __init__.py  current.py  last_resort.py  pip_freeze.py  unknown.py
src/ewoks/_requirements/metadata/gather/installed/: __init__.py  git.py
src/ewoks/_requirements/metadata/native/: __init__.py  git.py  types.py
src/ewoks/_requirements/models/: __init__.py  base.py  conda.py  distro.py  pip.py  pipenv.py  pixi.py  poetry.py  uv.py
src/ewoks/_requirements/pip/: extract.py
src/ewoks/cli_utils/: cli_convert_utils.py  cli_galaxy_utils.py  cli_install_utils.py  cli_lint_utils.py  cli_show_utils.py
src/ewoks/cliutils/: __init__.py  cli_convert_utils.py  cli_execute_utils.py  cli_install_utils.py  cli_show_utils.py  cliconvertutils.py  cliexecuteutils.py  clisubmitutils.py  requirements_utils.py  utils.py
src/ewoks/tests/: test_bindings.py  test_cli.py  test_cli_utils.py  test_convert_cli.py  test_execute_cli.py  test_galaxy_cli.py  test_install_cli.py  test_lint_cli.py  test_notebooks.py  test_requirements.py  test_task_utils.py
src/ewoks/tests/notebooks/: benchmark.ipynb  running_workflows.ipynb
src/ewoks/tests/requirements/: utils.py
src/ewoks/tests/requirements/pip/: test_freeze.py  test_install_cli.py
