[build-system]
requires = ["setuptools>=46.4"]
build-backend = "setuptools.build_meta"

[project]
name = "ewoks"
version = "4.0.1"
authors = [{ name = "ESRF", email = "dau-pydev@esrf.fr" }]
description = "Extensible Workflow System"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE.md" }
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "ewokscore >=4.0.1,<5",
    "ewoksutils >=1.6.0,<2",
    "tabulate",
    "importlib_resources; python_version < '3.9'",
]

[project.urls]
Homepage = "https://github.com/ewoks-kit/ewoks/"
Documentation = "https://ewoks.readthedocs.io/"
Repository = "https://github.com/ewoks-kit/ewoks/"
Issues = "https://github.com/ewoks-kit/ewoks/issues"
Changelog = "https://github.com/ewoks-kit/ewoks/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dask = ["ewoksdask >=2,<3"]
ppf = ["ewoksppf >=2,<3"]
orange = ["ewoksorange >=3,<4"]
esrf-data-portal = ["pyicat-plus"]
notebooks = ["ewokscore[notebooks]"]
test = [
    "ewoksutils[test]",
    "ewoks[dask]",
    "ewoks[ppf]",
    "ewoks[orange]",
    "ewoks[esrf-data-portal]",
    "pytest >=7",
    "testbook",
    "ipykernel",
    "importlib_resources",
    "pyqt5",
    "pytest-venv",
]
dev = ["ewoks[test]", "ruff"]
doc = [
    "ewoks[test]",
    "sphinx >=4.5",
    "docutils <0.22",
    "sphinx-autodoc-typehints >=1.16",
    "ipykernel",
    "nbsphinx",
    "nbsphinx_link",
    "pydata-sphinx-theme",
    "sphinx-argparse",
    "sphinx-copybutton",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
omit = ['*/tests/*']

[project.scripts]
ewoks = "ewoks.__main__:main"

[tool.setuptools.package-data]
"ewoks.tests.notebooks" = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Ignore `S101` (assert used violations) in all test files
"src/ewoks/tests/*.py" = ["S101"]

[tool.ruff.lint.isort]
force-single-line = true
