[metadata]
name = ewoks
version = 0.0.1-alpha
author = ESRF
author_email = wout.de_nolf@esrf.fr
description = ESRF Workflow System
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://gitlab.esrf.fr/workflow/ewoks/ewoks
project_urls = 
    Bug Tracker = https://gitlab.esrf.fr/workflow/ewoks/ewoks/-/issues
classifiers = 
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    ewokscore @ git+https://git@gitlab.esrf.fr/workflow/ewoks/ewokscore.git@main
    ewoksdask @ git+https://git@gitlab.esrf.fr/workflow/ewoks/ewoksdask.git@main
    ewoksppf @ git+https://git@gitlab.esrf.fr/workflow/ewoks/ewoksppf.git@main
    ewoksorange @ git+https://git@gitlab.esrf.fr/workflow/ewoks/ewoksorange.git@main

[options.extras_require]
dev = 
    ewokscore[dev] @ git+https://git@gitlab.esrf.fr/workflow/ewoks/ewokscore.git@main
    ewoksdask[dev] @ git+https://git@gitlab.esrf.fr/workflow/ewoks/ewoksdask.git@main
    ewoksppf[dev] @ git+https://git@gitlab.esrf.fr/workflow/ewoks/ewoksppf.git@main
    ewoksorange[dev] @ git+https://git@gitlab.esrf.fr/workflow/ewoks/ewoksorange.git@main
test = 
    ewokscore[test] @ git+https://git@gitlab.esrf.fr/workflow/ewoks/ewokscore.git@main
    ewoksdask[test] @ git+https://git@gitlab.esrf.fr/workflow/ewoks/ewoksdask.git@main
    ewoksppf[test] @ git+https://git@gitlab.esrf.fr/workflow/ewoks/ewoksppf.git@main
    ewoksorange[test] @ git+https://git@gitlab.esrf.fr/workflow/ewoks/ewoksorange.git@main
