[metadata]
name = ewoks
version = 0.0.1-alpha
author = ESRF
author_email = wout.de_nolf@esrf.fr
description = ESRF Workflow System
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://gitlab.esrf.fr/workflow/ewoks/ewoks
project_urls = 
    Bug Tracker = https://gitlab.esrf.fr/workflow/ewoks/ewoks/-/issues
classifiers = 
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    ewokscore

[options.extras_require]
dask = 
    ewoksdask
ppf = 
    ewoksppf
orange = 
    ewoksorange @ git+https://git@gitlab.esrf.fr/workflow/ewoks/ewoksorange.git@main
test = 
    pytest
    testbook
    ipykernel
    ewokscore[test]
    ewoksdask[test]
    ewoksppf[test]
    ewoksorange[test] @ git+https://git@gitlab.esrf.fr/workflow/ewoks/ewoksorange.git@main
dev = 
    black
    flake8
    flake8_nb
    %(test)s

# E501 (line too long) ignored for now
# E203 and W503 incompatible with black formatting (https://black.readthedocs.io/en/stable/compatible_configs.html#flake8)
[flake8]
ignore = E501, E203, W503
max-line-length = 88
exclude = 
    .eggs

# E402 (module import not at top of file) ignored
[flake8_nb]
ignore = E501, E203, W503, E402
max-line-length = 88
