[metadata]
name = ewoks
version = attr: ewoks.__version__
author = ESRF
author_email = wout.de_nolf@esrf.fr
description = ESRF Workflow System
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://gitlab.esrf.fr/workflow/ewoks/ewoks/
project_urls = 
    Source = https://gitlab.esrf.fr/workflow/ewoks/ewoks/
    Documentation = https://ewoks.readthedocs.io/
    Tracker = https://gitlab.esrf.fr/workflow/ewoks/ewoks/issues/
classifiers = 
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
package_dir=
	=src
packages=find:
python_requires = >=3.6
install_requires = 
    ewokscore

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    ewoks=ewoks.__main__:main

[options.extras_require]
dask =
    ewoksdask
ppf =
    ewoksppf
orange =
    ewoksorange
test =
    pytest
    testbook
    ipykernel
    ewokscore[test]
    ewoksdask[test]
    ewoksppf[test]
    ewoksorange[test]
dev =
    %(test)s
    black[jupyter]>=21.8b0
    flake8
    flake8_nb
doc =
    %(test)s
    sphinx
    ipykernel
    nbsphinx
    nbsphinx_link

# E501 (line too long) ignored for now
# E203 and W503 incompatible with black formatting (https://black.readthedocs.io/en/stable/compatible_configs.html#flake8)
[flake8]
ignore = E501, E203, W503
max-line-length = 88
exclude = 
    .eggs

# E402 (module import not at top of file) ignored
[flake8_nb]
ignore = E501, E203, W503, E402
max-line-length = 88

[build_sphinx]
project = ewoks
version = attr: ewoks.__version__
source-dir = ./doc

[coverage:run]
omit =
    setup.py
    */tests/*
